--- a/data-structure/07-Graph/Test.html
+++ b/data-structure/07-Graph/Test.html
@@ -8,6 +8,7 @@
     <script src="ReadGraph.js"></script>
     <script src="Component.js"></script>
     <script src="Path.js"></script>
+    <script src="ShortestPath.js"></script>
     <script>
         function execute() {
 //            var N = 20, M = 100;
